--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,12 @@ header p{
 
 }
 
+img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .about-image, .method-image, .clients-image, .contact-image{
   width: 100%;
   grid-column: 1/-1;
